2000-04-04  John Smith <john@arrows.demon.co.uk>

	* statistics/distributions/beta_inv.m: Provide better(?) initial
	guess for iteration.

2000-03-31   Paul Kienzle  <pkienzle@kienzle.powernet.co.uk>

	* image/image.m: Allow image (A) or image (x, y, A).
	* image/imagesc.m: Likewise.

	* image/image.m: If zoom is not supplied, or if it is an empty
	matrix, autoscale the image.

2000-03-22  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* plot/title.m, plot/bottom_title.m, plot/top_title.m: 
	Undo string escapes in text twice(!) before sending to gnuplot.

	* image/saveimage.m: Add comment to file saying who created it and
	when it was created.  Suggested by Stephen Eglen
	<stephen@cogsci.ed.ac.uk>.

2000-03-21  Paul Kienzle <pkienzle@kienzle.powernet.co.uk>

	* polynomial/polyreduce.m: Simplify by looking for the first
	non-zero element rather than the last of the first set of zero
	elements.

	* plot/__pltopt1__.m: Accept "--", "-.", and ":" line styles.

2000-03-21  Kai Habel <kahacjde@calvados.zrz.TU-Berlin.DE>

	* image/saveimage.m: Swap black and white colormaps so zero is
	displayed as black and 1 is displayed as white.
	Fix indexing bug in ppm case.

2000-03-06  Stephen Eglen  <stephen@anc.ed.ac.uk>

	* statistics/tests/kolmogorov_smirnov_test_2.m: Account for ties
	between the two distributions (took same approach as ks.test() in R.)

2000-02-29  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* control/base/bode.m: Temporarily disable automatic_replot.

2000-02-23  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makefile.in (clean): Also remove gethelp.

	* specfun/erfinv.m: Use z_new in convergence test, not z_old.

2000-02-11  Georg Thimm <mgeorg@SGraphicsWS1.mpe.ntu.edu.sg>

	* set/create_set.m: Use find to avoid while loop.

2000-02-11  Stephen Eglen <stephen@cogsci.ed.ac.uk>

	* plot/hist.m: New optional third argument.

2000-02-10  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* miscellaneous/bug_report.m: Use octave-bug script with version
	number appended.
