@@ -1,3 +1,11 @@
+2000-05-13  John W. Eaton  <jwe@bevo.che.wisc.edu>
+
+	* strings/strrep.m: Don't transpose result for case of jump > 0.
+
+2000-05-13  Paul Kienzle <pkienzle@kienzle.powernet.co.uk>
+
+	* strings/strrep.m: Avoid for loop for speed.
+
 2000-04-04  John Smith <john@arrows.demon.co.uk>
 
 	* statistics/distributions/beta_inv.m: Provide better(?) initial
